# api/swagger.yml
@@ -1,62 +1,286 @@
+#swagger: "2.0"
+#info:
+#  description: "This is a sample Skills."
+#  version: "1.0.0"
+#  title: "Skills"
+#  contact:
+#    email: "flexhamp@gmail.com"
+#host: "localhost"
+#basePath: "/v2"
+#tags:
+#- name: "skills"
+#  description: "Everything about your Skills"
+#  externalDocs:
+#    description: "Find out more"
+#    url: "http://localhost/skills"
+#schemes:
+#- "http"
+#paths:
+#  /skill:
+#    post:
+#      tags:
+#      - "skill"
+#      summary: "Add a new skill"
+#      description: ""
+#      operationId: "addSkill"
+#      consumes:
+#      - "application/json"
+#      produces:
+#      - "application/json"
+#      parameters:
+#      - in: "body"
+#        name: "skill"
+#        description: "Skill object that needs to be added"
+#        required: true
+#        schema:
+#          $ref: "#/definitions/Skill"
+#      responses:
+#        201:
+#          description: "Skill successfuli create"
+#        405:
+#          description: "Invalid input"
+##    put:
+##      tags:
+##      - "skill"
+##      summary: "Update an existing skill"
+##      description: ""
+##      operationId: "updateSkill"
+##      consumes:
+##      - "application/json"
+##      produces:
+##      - "application/json"
+##      parameters:
+##      - in: "body"
+##        name: "name"
+##        required: true
+##        schema:
+##          $ref: "#/definitions/Skill"
+##      responses:
+##        400:
+##          description: "Invalid ID supplied"
+##        404:
+##          description: "Skill not found"
+##        405:
+##          description: "Validation exception"
+##  /skill/{skillId}:
+##    get:
+##      tags:
+##      - "skill"
+##      summary: "Find skill by ID"
+##      description: "Returns a single skill"
+##      operationId: "getSkillById"
+##      produces:
+##      - "application/json"
+##      parameters:
+##      - name: "skillId"
+##        in: "path"
+##        description: "ID of skill to return"
+##        required: true
+##        type: "integer"
+##        format: "int64"
+##      responses:
+##        200:
+##          description: "successful operation"
+##          schema:
+##            $ref: "#/definitions/Skill"
+##        400:
+##          description: "Invalid ID supplied"
+##        404:
+##          description: "Skill not found"
+#    delete:
+#      tags:
+#      - "skill"
+#      summary: "Deletes a skill"
+#      description: ""
+#      operationId: "deleteSkill"
+#      produces:
+#      - "application/json"
+#      parameters:
+#      - name: "api_key"
+#        in: "header"
+#        required: false
+#        type: "string"
+#      - name: "skillId"
+#        in: "path"
+#        description: "Skill id to delete"
+#        required: true
+#        type: "integer"
+#        format: "int64"
+#      responses:
+#        400:
+#          description: "Invalid ID supplied"
+#        404:
+#          description: "Skill not found"
+#definitions:
+#  Skill:
+#    type: "object"
+#    required:
+#    - "name"
+#    properties:
+#      id:
+#        type: "integer"
+#        format: "int64"
+#      name:
+#        type: "string"
+#        example: "Java"
+#      study:
+#        type: "number"
+#        format: "float"
+#      progress:
+#        type: "number"
+#        format: "float"
+#  ListSkillResponse:
+#    type: "array"
+#    items:
+#      $ref: "#/definitions/Skill"
+
 swagger: "2.0"
 info:
   description: "This is a sample specification for user service"
   version: "1.0.0"
   title: "User Service contract"
 tags:
-  - name: "user"
+  - name: "skill"
 paths:
-  /user:
+  /skill:
     get:
       tags:
-        - "user"
-      summary: "Gets a list of users"
+        - "skill"
+      summary: "Gets a list of skill"
       description: ""
-      operationId: "getUsers"
+      operationId: "getSkills"
       consumes:
       - "*/*"
       produces:
       - "application/json"
       responses:
         200:
-          schema:
-            $ref: "#/definitions/ListUserResponse"
-          description: "List of all users"
+         schema:
+          type: "array"
+          items:
+            $ref: "#/definitions/Skill"
     post:
       tags:
-        - "user"
-      summary: "Creates a new user"
-      operationId: "createUser"
+        - "skill"
+      summary: "Creates a new skill"
+      operationId: "createSkill"
       consumes:
       - "application/json"
       produces:
       - "application/json"
       parameters:
       - in: "body"
-        name: "user"
-        description: "The user data"
-        required: true
+        name: "skill"
+        description: "The skill data"
         schema:
-          $ref: "#/definitions/UserCreateRequest"
+          $ref: "#/definitions/Skill"
       responses:
-        201:
-          description: "User successfully created"
+        200:
+         schema:
+          type: "array"
+          items:
+            $ref: "#/definitions/Skill"
+#        201:
+#          description: "User successfully created"
         400:
           description: "Validation error"
+    delete:
+      tags:
+      - "skill"
+      summary: "Deletes a skill"
+      description: ""
+      operationId: "deleteSkill"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "skillId"
+        in: "path"
+        description: "Skill id to delete"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Skill"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Skill not found"
+    put:
+      tags:
+      - "skill"
+      summary: "Update an existing skill"
+      description: ""
+      operationId: "updateSkill"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "name"
+        required: true
+        schema:
+          $ref: "#/definitions/Skill"
+      responses:
+        200:
+         schema:
+          type: "array"
+          items:
+            $ref: "#/definitions/Skill"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Skill not found"
+        405:
+          description: "Validation exception"
+  /skill/{skillId}:
+    get:
+      tags:
+      - "skill"
+      summary: "Find skill by ID"
+      description: "Returns a single skill"
+      operationId: "getSkillById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "skillId"
+        in: "path"
+        description: "ID of skill to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Skill"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Skill not found"
 definitions:
-  ListUserResponse:
-    type: "array"
-    items:
-      $ref: "#/definitions/UserResponse"
-  UserResponse:
+  Skill:
     type: "object"
+    required:
+    - "name"
     properties:
       id:
         type: "integer"
+        format: "int64"
       name:
         type: "string"
-  UserCreateRequest:
-    type: "object"
-    properties:
-      name:
-        type: "string"
+        example: "Java"
+      study:
+        type: "number"
+        format: "float"
+      progress:
+        type: "number"
+        format: "float"
+#  ListSkillResponse:
+#    type: "array"
+#    items:
+#      $ref: "#/definitions/Skill"
